problem1/runs/0.compile
  File "problem1/runs/0.py", line 2
    for i in range(n+1)
                       ^
SyntaxError: expected ':'

